# makefiles

./: README.md
001/: Makefile  README.md  main.cpp
001/include/: 3rdparty.h
001/moduleA/: ma.cpp
001/moduleA/include_in/: in.h
001/moduleB/: mb.cpp
002/: CMakeLists.txt  README.md  main.cpp  mainConfig.h.in
002/applications/app1/: CMakeLists.txt  app1.cpp  app1.h
002/applications/app2/: CMakeLists.txt  app2.cpp  app2.h
002/essentials/moduleA/: CMakeLists.txt  ma.cpp  ma.h  ma_in.cpp
002/essentials/moduleB/: CMakeLists.txt  mb.cpp  mb.h
002/include/components/: 3rdparty.h  opensource.h
002/include/essentials/: ma.h  mb.h
002/moduleA/: CMakeLists.txt  ma.h
002/toolchain/: arm-linux.cmake
others/opensource/: Makefile  opensource.cpp  opensource.h
